Added subcategory, ReflexctionExtension method, IEnumerableExtension method. Addes new font for headers, added back font-awesome image to back button.

--- a/ChoreChampion/Views/Shared/_CreateAndBackToListButtonsPartial.cshtml
+++ b/ChoreChampion/Views/Shared/_CreateAndBackToListButtonsPartial.cshtml
@@ -3,6 +3,6 @@
         <input type="submit" class="btn btn-success form-control" value="Create" />
     </div>
     <div class="col-6">
-        <a asp-action="Index" class="btn btn-secondary form-control">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary form-control"><i class="fas fa-undo-alt"></i>&nbsp;Back</a>
     </div>
 </div>
