--- a/ChoreChampion/Areas/Admin/Views/Category/Delete.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Category/Delete.cshtml
@@ -6,7 +6,7 @@
 }
 
 <br />
-<h2 class="text-dark font-weight-bold">Delete Category</h2>
+<h2 class="text-dark header-bold">Delete Category</h2>
 <br />
 
 <form method="post" asp-action="Delete">
@@ -16,7 +16,7 @@
                 <label asp-for="Name" class="col-form-label"></label>
             </div>
             <div class="col-5">
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" readonly class="form-control" />
             </div>
         </div>
         <div class="form-group row">
