--- a/ChoreChampion/Areas/Admin/Views/SubCategory/Index.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/SubCategory/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Category>
+﻿@model IEnumerable<SubCategory>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -9,7 +9,7 @@
 <div class="border backgroundWhite">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-dark header-bold">Categories</h2>
+            <h2 class="text-dark header-bold">Sub Categories</h2>
         </div>
         <div class="col-6 text-right">
             <partial name="_CreateButtonPartial" />
@@ -26,6 +26,9 @@
                         <th>
                             @Html.DisplayNameFor(m => m.Name)
                         </th>
+                        <th>
+                            @Html.DisplayNameFor(m => m.Category.Name)
+                        </th>
                         <th></th>
                         <th></th>
                     </tr>
@@ -38,6 +41,9 @@
                                 @Html.DisplayFor(m => item.Name)
                             </td>
                             <td>
+                                @Html.DisplayNameFor(m => item.Category.Name)
+                            </td>
+                            <td>
                                 <partial name="_TableEditDetailDeleteButtonsPartial" model="item.Id" />
                             </td>
                         </tr>
@@ -47,7 +53,7 @@
         }
         else
         {
-            <p>No categories exist yet.</p>
+            <p>No Sub Categories exist yet.</p>
         }
     </div>
 </div>
