--- a/ChoreChampion/Views/Shared/_Layout.cshtml
+++ b/ChoreChampion/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <script src="https://kit.fontawesome.com/ccb58f7097.js" crossorigin="anonymous"></script>
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab:700,800&display=swap" rel="stylesheet">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
@@ -16,7 +16,7 @@
               crossorigin="anonymous"
               integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
         <script src="https://kit.fontawesome.com/ccb58f7097.js" crossorigin="anonymous"></script>
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab:700,800&display=swap" rel="stylesheet">
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -38,7 +38,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropDownMenuLink">
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                                <a class="dropdown-item">Sub-Category</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="SubCategory" asp-action="Index">Sub-Category</a>
                                 <a class="dropdown-item">Chores</a>
                                 <a class="dropdown-item">Rewards</a>
                                 <a class="dropdown-item">Users</a>
