Work on subcategory, added logo, etc.

--- a/ChoreChampion/Areas/Admin/Views/Category/Details.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Category/Details.cshtml
@@ -6,7 +6,7 @@
 }
 
 <br />
-<h2 class="text-dark header-bold">Category Details</h2>
+<h2 class="text-white header-bold">Category Details</h2>
 <br />
 
 <div class="border backgroundWhite">
