--- a/ChoreChampion/Areas/Admin/Views/Category/Edit.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Category/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 
 <br />
-<h2 class="text-dark header-bold">Edit Category</h2>
+<h2 class="text-white header-bold">Edit Category</h2>
 <br />
 
 <form method="post" asp-action="Edit">
