--- a/ChoreChampion/Areas/Admin/Views/Category/Create.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Category/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <br />
-<h2 class="text-dark header-bold">Create Category</h2>
+<h2 class="text-white header-bold">Create Category</h2>
 <br />
 
 <form method="post" asp-action="Create">
