--- a/ChoreChampion/Areas/Admin/Views/Category/Delete.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Category/Delete.cshtml
@@ -6,7 +6,7 @@
 }
 
 <br />
-<h2 class="text-dark header-bold">Delete Category</h2>
+<h2 class="text-white header-bold">Delete Category</h2>
 <br />
 
 <form method="post" asp-action="Delete">
