--- a/ChoreChampion/Areas/Admin/Views/SubCategory/Index.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/SubCategory/Index.cshtml
@@ -41,7 +41,7 @@
                                 @Html.DisplayFor(m => item.Name)
                             </td>
                             <td>
-                                @Html.DisplayNameFor(m => item.Category.Name)
+                                @item.Category.Name
                             </td>
                             <td>
                                 <partial name="_TableEditDetailDeleteButtonsPartial" model="item.Id" />
