Finished adding Edit - get and edit - post action to subcategory controller

--- a/ChoreChampion/Areas/Admin/Views/Category/Index.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Category/Index.cshtml
@@ -34,7 +34,7 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td>
+                            <td class="non-bold-text">
                                 @Html.DisplayFor(m => item.Name)
                             </td>
                             <td>
