--- a/ChoreChampion/Areas/Admin/Views/SubCategory/Index.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/SubCategory/Index.cshtml
@@ -37,10 +37,10 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td>
+                            <td class="non-bold-text">
                                 @Html.DisplayFor(m => item.Name)
                             </td>
-                            <td>
+                            <td class="non-bold-text">
                                 @item.Category.Name
                             </td>
                             <td>
