--- a/ChoreChampion/Views/Shared/_DetailsAndBackToListButtons.cshtml
+++ b/ChoreChampion/Views/Shared/_DetailsAndBackToListButtons.cshtml
@@ -5,6 +5,6 @@
         <a asp-action="Edit" asp-route-Id="@Model" class="btn btn-info form-control">Edit</a>
     </div>
     <div class="col-6">
-        <a asp-action="Index" class="btn btn-secondary form-control"><i class="fas fa-undo-alt"></i>&nbsp; Back</a>
+        <a asp-action="Index" class="btn btn-success form-control"><i class="fas fa-undo-alt"></i>&nbsp; Back</a>
     </div>
 </div>
