--- a/ChoreChampion/Views/Shared/_Layout.cshtml
+++ b/ChoreChampion/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <script src="https://kit.fontawesome.com/ccb58f7097.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab:700,800&display=swap" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css" rel="stylesheet" type="text/css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
@@ -17,6 +18,7 @@
               integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
         <script src="https://kit.fontawesome.com/ccb58f7097.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab:700,800&display=swap" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css" rel="stylesheet" type="text/css" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -39,7 +41,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropDownMenuLink">
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="SubCategory" asp-action="Index">Sub-Category</a>
-                                <a class="dropdown-item">Chores</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Chore" asp-action="Index">Chores</a>
                                 <a class="dropdown-item">Rewards</a>
                                 <a class="dropdown-item">Users</a>
                             </div>
@@ -68,10 +70,14 @@
     </footer>
 
     <environment include="Development">
+        <script src="https://cdn.tiny.cloud/1/5b5ycb1xb61mnc3bxlvycd7jmmg2n8de9aenzssuf6arqk20/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
+
     </environment>
     <environment exclude="Development">
+        <script src="https://cdn.tiny.cloud/1/5b5ycb1xb61mnc3bxlvycd7jmmg2n8de9aenzssuf6arqk20/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
                 asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                 asp-fallback-test="window.jQuery"
@@ -84,6 +90,7 @@
                 crossorigin="anonymous"
                 integrity="sha256-E/V4cWE4qvAeO5MOhjtGtqDzPndRO1LBk8lJ/PR7CA4=">
         </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
