--- a/ChoreChampion/Views/Shared/_Layout.cshtml
+++ b/ChoreChampion/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body class="darkened-background" id="body">
+<body class="darkened-background" >
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
@@ -74,7 +74,6 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
-
     </environment>
     <environment exclude="Development">
         <script src="https://cdn.tiny.cloud/1/5b5ycb1xb61mnc3bxlvycd7jmmg2n8de9aenzssuf6arqk20/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
