--- a/ChoreChampion/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ChoreChampion/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,8 +5,8 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
+<h1 class="text-white header-bold">@ViewData["Title"]</h1>
+<div class="row border backgroundWhite">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
