--- a/ChoreChampion/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ChoreChampion/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-white header-bold">@ViewData["Title"]</h1>
 
-<div class="row">
+<div class="row border backgroundWhite">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Create a new account.</h4>
