--- a/ChoreChampion/Views/Shared/_Layout.cshtml
+++ b/ChoreChampion/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body >
+<body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
@@ -42,8 +42,9 @@
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="SubCategory" asp-action="Index">Sub-Category</a>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Chore" asp-action="Index">Chores</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">Users</a>
                                 <a class="dropdown-item">Rewards</a>
-                                <a class="dropdown-item">Users</a>
+                                
                             </div>
                         </li>
                         <li class="nav-item">
@@ -92,7 +93,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
 
     @RenderSection("Scripts", required: false)
 </body>
