--- a/ChoreChampion/Areas/Admin/Views/User/Index.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/User/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="border backgroundWhite">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-dark header-bold">List of users</h2>
+            <h2 class="text-dark header-bold">Manage users</h2>
         </div>
         <div class="col-6 text-right">
             <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-primary"><i class="fas fa-plus"></i>&nbsp; Register new user</a>
@@ -50,7 +50,14 @@
                                 @Html.DisplayFor(m => item.Email)
                             </td>
                             <td>
-                                <a class="btn btn-success text-white" asp-action="Lock" asp-route-id="@item.Id"><i class="fas fa-lock-open"></i></a>
+                                @if (item.LockoutEnd < DateTime.Now || item.LockoutEnd == null)
+                                {
+                                    <a class="btn btn-success text-white" asp-action="Lock" asp-route-id="@item.Id"><i class="fas fa-lock-open"></i></a>
+                                }
+                                else
+                                {
+                                    <a class="btn btn-danger text-white" asp-action="Unlock" asp-route-id="@item.Id"><i class="fas fa-lock"></i></a>
+                                }
                             </td>
                         </tr>
                     }
