--- a/ChoreChampion/Areas/NonAdmin/Views/Home/Index.cshtml
+++ b/ChoreChampion/Areas/NonAdmin/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using ChoreChampion.Utility
+@{
     ViewData["Title"] = "Home";
 }
 <body>
@@ -31,6 +32,18 @@
             {
                 <a asp-area="Identity" asp-controller="Account" asp-action="Login" type="button" class="btn btn-primary btn-lg btn-block">Log In</a>
                 <a asp-area="Identity" asp-controller="Account" asp-action="Register" type="button" class="btn btn-success btn-lg btn-block">Register</a>
+            }
+            else
+            {
+                if (User.IsInRole(StaticDetails.RegularUser))
+                {
+                    @*TO DO: Make this link to regular user chore section *@
+                    <a asp-area="#" asp-controller="#" asp-action="#" type="button" class="btn btn-primary btn-block btn-lg">My Chores &nbsp; <i class="fas fa-tasks"></i></a>
+                }
+                else
+                {
+                    <a asp-area="Admin" asp-controller="Chore" asp-action="Index" type="button" class="btn btn-primary btn-lg btn-block">Manage Chores &nbsp; <i class="fas fa-tasks"></i></a>
+                }
             }
         </div>
     </div>
