--- a/ChoreChampion/Areas/Admin/Views/Chore/Create.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Chore/Create.cshtml
@@ -56,18 +56,23 @@
         </div>
         <div class="form-group row">
             <div class="col-2">
+                <label asp-for="Chore.UserId" class="col-form-label"></label>
+            </div>
+            <div class="col-5">
+                <select asp-for="@Model.Chore.UserId" id="UserId" asp-items="Model.User.ToSelectListItem(1)" class="form-control"></select>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
                 <label asp-for="Chore.DueDate" class="col-form-label"></label>
             </div>
-            
-           
-                <div class="col-5">
-                    <div id="datepicker" class="input-group date" data-date-format="mm-dd-yyyy">
-                        <input asp-for="@Model.Chore.DueDate" class="form-control" type="text" readonly />
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                    </div>
-                </div>
 
-           
+            <div class="col-5">
+                <div id="datepicker" class="input-group date" data-date-format="mm-dd-yyyy">
+                    <input asp-for="@Model.Chore.DueDate" class="form-control" type="text" readonly />
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                </div>
+            </div>
         </div>
         <div class="form-group row">
             <div class="col-5 offset-2">
@@ -88,8 +93,8 @@
 
     <script type="text/javascript">
         $(function () {
-  $("#datepicker").datepicker({ 
-        autoclose: true, 
+  $("#datepicker").datepicker({
+        autoclose: true,
         todayHighlight: true
   }).datepicker('update', new Date());
 });
