Now able to assign chores to users. Updated create chore form to include user selection and index view to show who chore is assigned to. Updated IEnumerableExtension to also accept string parameter as id.

--- a/ChoreChampion/Areas/Admin/Views/Chore/Create.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Chore/Create.cshtml
@@ -59,7 +59,7 @@
                 <label asp-for="Chore.UserId" class="col-form-label"></label>
             </div>
             <div class="col-5">
-                <select asp-for="@Model.Chore.UserId" id="UserId" asp-items="Model.User.ToSelectListItem(1)" class="form-control"></select>
+                <select asp-for="@Model.Chore.UserId" id="UserId" asp-items="Model.User.ToSelectListItem(Model.Chore.UserId)" class="form-control"></select>
             </div>
         </div>
         <div class="form-group row">
