--- a/ChoreChampion/Areas/Admin/Views/Chore/Index.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Chore/Index.cshtml
@@ -33,6 +33,9 @@
                             @Html.DisplayNameFor(m => m.SubCategoryId)
                         </th>
                         <th>
+                            @Html.DisplayNameFor(m => m.UserId)
+                        </th>
+                        <th>
                             @Html.DisplayNameFor(m => m.DueDate)
                         </th>
                         <th></th>
@@ -51,6 +54,9 @@
                         </td>
                         <td class="non-bold-text">
                             @Html.DisplayFor(m => item.SubCategory.Name)
+                        </td>
+                        <td class="non-bold-text">
+                            @Html.DisplayFor(m => item.User.Name)
                         </td>
                         @if (item.DueDate < DateTime.Now.Date)
                         {
