--- a/ChoreChampion/Views/Shared/_TableMarkChoreCompleteButton.cshtml
+++ b/ChoreChampion/Views/Shared/_TableMarkChoreCompleteButton.cshtml
@@ -3,7 +3,7 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 <td>
-    <a class="btn btn-primary text-white" asp-action="Post" asp-route-Id="@Model">
+    <a class="btn btn-primary text-white" asp-action="CompleteChore" asp-route-Id="@Model">
         <i class="fas fa-arrow-right"></i>
     </a>
 </td>
