Added view for completed chores as well as non complete chores for admin. Added after image to details view for completed chores so admin can see after pictures. Added partial buttons for these new views. Deleted old data and added some new demo data demonstrating new functionality.

--- a/ChoreChampion/Areas/Admin/Views/Chore/CompletedChores.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Chore/CompletedChores.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Chore>
 @{
-    ViewData["Title"] = "Incomplete Chores";
+    ViewData["Title"] = "Completed Chores";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -9,11 +9,10 @@
 <div class="border backgroundWhite">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-dark header-bold">Incomplete Chores</h2>
+            <h2 class="text-dark header-bold">Completed Chores</h2>
         </div>
         <div class="col-6 text-right">
-            <partial name="_ViewCompletedChoresButtonPartial" />
-            <partial name="_CreateButtonPartial" />
+            <partial name="_BackButtonPartial" />
         </div>
     </div>
     <br />
