Updated some conditional displays for if no chores are available to be displayed

--- a/ChoreChampion/Areas/Admin/Views/Chore/CompletedChores.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Chore/CompletedChores.cshtml
@@ -81,7 +81,7 @@
         }
         else
         {
-            <p>No chores exist yet.</p>
+            <p>There are no completed chores.</p>
         }
     </div>
 </div>
