--- a/ChoreChampion/Areas/Admin/Views/Chore/Index.cshtml
+++ b/ChoreChampion/Areas/Admin/Views/Chore/Index.cshtml
@@ -82,7 +82,7 @@
         }
         else
         {
-            <p>No chores exist yet.</p>
+            <p>There are no uncompleted chores.</p>
         }
     </div>
 </div>
